Fix expand button alignment

--- a/vocabee/home/static/sass/pages/vocab.sass
+++ b/vocabee/home/static/sass/pages/vocab.sass
@@ -18,6 +18,9 @@
   tr
     color: $secondaryblack
 
+    td::before
+      font-family: monospace
+
 .audio-column, .example-column
   text-align: center
 
